# Tiny-Predictive-Text

./: .gitignore  Makefile  README.md  constants.py  create_dictionary.py  create_fingerprint_dictionary.py  dict.js  dictionary copy.js  dictionary-anchors-10K.js  dictionary-anchors-25K.js  dictionary-anchors.js  dictionary-properties-10K.js  dictionary-properties-25K.js  dictionary-properties.js  dictionary-test.msgpack  dictionary.js  dictionary.msgpack  fingerprint.html  index.html  loading-bar.css  merge_epochs.py  package-lock.json  package.json  permute.js  script-fingerprint.js  script.js  script.min.js  setup.py  style.css  test.py  tinypredict.js  token-mapping.js  tokens-test.msgpack  tokens.json  tokens.msgpack  train-fingerprints.py  train.py  webpack.config.js
Tiny_Predictive_Text.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backup/: dictionary.pkl  processing_progress.txt
lib/: '1p':.dart  create_dictionary.py  finish_filing.py  merge_batches.py  merge_epochs.py  process_context_words.py  process_predictive_words.py  process_words.py
wasm/: Cargo.toml
wasm/pkg/: package.json  tinypredict.d.ts  tinypredict.js  tinypredict_bg.wasm  tinypredict_bg.wasm.d.ts
wasm/src/: lib.rs
