[package]
name = "tinypredict"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.92"
serde = { version = "1.0.197", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
rmp-serde = "1.1.2"
web-sys = "0.3"
lazy_static = "1.4.0"
log = "0.4"
console_log = "0.2"
strsim = "0.10.0"

[lib]
crate-type = ["cdylib"]

[profile.release]
debug = true